src/test/deca/context/invalid/intermediaire2/mots_reserves/13printlnx.deca
// Description:
// Test du mettre le mot réservé printlnx, en nom de variable.
//
// Resultats:
//  13printlnx.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int printlnx;
}